experimental: overhaul launch logic for NeoForge 1.21.1 and Java 21